--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,18 +1,45 @@
-/* Aula inicial :D */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    background-image:url('https://www.significadofacil.com/wp-content/uploads/2019/07/background.jpg');
-    backdrop-filter: blur(15px);
+    background-image:url('../Imagens/Fundo.jpg');
     background-size:auto 100vh;
     height:100vh;
     font-family:arial;
     margin:0px;
+  font-size: 10px;
+  }
+
+@media (min-width:400px) {
+  body {
+  font-size: 14px;
+  }
+}
+
+@media (min-width:700px) {
+  body {
+  font-size: 18px;
+  }
+}
+
+header {
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  
+.menu {
+    background-color:whitesmoke;
+    position: fixed;
+    width: 100vw;
+    top: 0;
   }
   
-  .menu {
-    background-color:white
-  }
-  
-  .menu ul{
+.menu ul{
     display:flex;
     justify-content: space-around;
   }
@@ -21,8 +48,14 @@ body {
     list-style: none
   }
   
+.menu a {
+  display: block;
+  background-color: tomato;
+  padding: 20px 20px;
+}
+
   a{
-    color:teal;
+    color:rgb(128, 79, 0);
     text-decoration: none;
   }
   
@@ -32,6 +65,15 @@ body {
   
   .site-subtitle,
   .site-title {
-    color:	#48D1CC;
+    color:	#4D1546;
     text-align:center;
+  }
+
+  .site-title {
+  font-size: 4em;
+  }
+
+  .img-portfolio {
+    height: 180px;
+    width: 180px;
   }
